<resources>
    <string name="app_name">Navit</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="goal_label">目的地</string>
    <string name="goal_label_input">目的地を入力してください</string>
    <string name="search">検索</string>
    <string name="widget_error">ボタンを押して更新してください</string>
    <string name="reload_btn">Reload Button</string>
    <string name="set_goal_label">現在セットされている目的地</string>
    <string name="set_goal_text">目的地がセットされていません</string>
</resources>