<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <TextView
        android:id="@+id/inputGoalLabel"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/goal_label"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="47dp" />


    <EditText
        android:id="@+id/input_goal_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:hint="@string/goal_label_input"
        android:inputType="text"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="#ff3300"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="138dp" />


    <Button
        android:id="@+id/search_point"
        android:width="300dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/configListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>